tests/snapshots/integration__integration_tests__for_each__for_each_command_fails_in_one.snap
---
source: tests/integration_tests/for_each.rs
info:
  program: wt
  args:
    - step
    - for-each
    - "--"
    - git
    - show
    - nonexistent-ref
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[36m◎[39m [36mRunning in [1mmain[22m...[39m
[0mfatal: ambiguous argument 'nonexistent-ref': unknown revision or path not in the working tree.
Use '--' to separate paths from revisions, like this:
'git <command> [<revision>...] -- [<file>...]'
[31m✗[39m [31mFailed in [1m[1mmain[22m[22m (exit code 128)[39m
[36m◎[39m [36mRunning in [1mfeature[22m...[39m
[0mfatal: ambiguous argument 'nonexistent-ref': unknown revision or path not in the working tree.
Use '--' to separate paths from revisions, like this:
'git <command> [<revision>...] -- [<file>...]'
[31m✗[39m [31mFailed in [1m[1mfeature[22m[22m (exit code 128)[39m
[36m◎[39m [36mRunning in [1mfeature-a[22m...[39m
[0mfatal: ambiguous argument 'nonexistent-ref': unknown revision or path not in the working tree.
Use '--' to separate paths from revisions, like this:
'git <command> [<revision>...] -- [<file>...]'
[31m✗[39m [31mFailed in [1m[1mfeature-a[22m[22m (exit code 128)[39m
[36m◎[39m [36mRunning in [1mfeature-b[22m...[39m
[0mfatal: ambiguous argument 'nonexistent-ref': unknown revision or path not in the working tree.
Use '--' to separate paths from revisions, like this:
'git <command> [<revision>...] -- [<file>...]'
[31m✗[39m [31mFailed in [1m[1mfeature-b[22m[22m (exit code 128)[39m
[36m◎[39m [36mRunning in [1mfeature-c[22m...[39m
[0mfatal: ambiguous argument 'nonexistent-ref': unknown revision or path not in the working tree.
Use '--' to separate paths from revisions, like this:
'git <command> [<revision>...] -- [<file>...]'
[31m✗[39m [31mFailed in [1m[1mfeature-c[22m[22m (exit code 128)[39m

[33m▲[39m [33m5 of 5 worktrees failed[39m
[107m [0m [1mmain[22m
[107m [0m [1mfeature[22m
[107m [0m [1mfeature-a[22m
[107m [0m [1mfeature-b[22m
[107m [0m [1mfeature-c[22m
